--- a/ch08/8.1/mysql.yaml
+++ b/ch08/8.1/mysql.yaml
@@ -4,13 +4,13 @@ metadata:
   name: drupal-mysql-service
 spec:
   ports:
-  - name: mysql
-    port: 3306
-    protocol: TCP
+    - name: mysql
+      port: 3306
+      protocol: TCP
   selector:
     app: drupal-mysql
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: drupal-mysql
